client/src/shared/styles/theme.css
/* ... */
@layer base {
  /**
   * Colors : dark
   * Overrides css variables defined in @theme
   */
  [data-theme="dark"] {
    --color-core-primary-fill: rgb(var(--base_white_100) / 90%);
    --color-text-primary: rgb(var(--base_white_100) / 90%);
    --color-text-primary-70: rgb(var(--base_white_100) / 70%);
    --color-text-primary-50: rgb(var(--base_white_100) / 50%);
    --color-text-primary-30: rgb(var(--base_white_100) / 30%);
    --color-text-contrast: rgb(var(--base_black_100));
    --color-text-contrast-70: rgb(var(--base_black_100) / 80%);
    --color-surface-2: rgb(var(--base_gray_50));
    --color-surface-5: rgb(var(--base_gray_60));
    --color-surface-10: rgb(var(--base_gray_70));
    --color-surface-20: rgb(var(--base_gray_80));
    --color-surface-base: rgb(var(--base_gray_90));
    --color-surface-elevated-base: rgb(var(--base_gray_80));
    --color-border-5: rgb(var(--base_white_100) / 5%);
    --color-border-10: rgb(var(--base_white_100) / 10%);
    --color-border-20: rgb(var(--base_white_100) / 20%);
    --color-border-primary: rgb(var(--base_white_100) / 90%);
    --color-core-accent-text: rgb(var(--base_text_accent_contrast));
    --color-intent-info-text: rgb(var(--base_blue_100));
    --color-elevation-50: 0px 0px 1px 0px rgba(var(--base_white_100) / 0.5);
    --color-elevation-100:
      0px 4px 24px 0px rgba(var(--base_black_100) / 0.16), 0px 4px 8px 0px rgba(var(--base_black_100) / 0.16),
      0px 2px 4px 0px rgba(var(--base_black_100) / 0.16), 0px 0px 1px 0px rgba(var(--base_black_100) / 0.16);
    --color-elevation-200:
      0px 12px 32px 0px rgba(var(--base_black_100) / 0.24), 0px 8px 16px 0px rgba(var(--base_black_100) / 0.16),
      0px 2px 4px 0px rgba(var(--base_black_100) / 0.08), 0px 0px 1px 0px rgba(var(--base_black_100) / 0.24);
    --color-elevation-300:
      0px 16px 40px 0px rgba(var(--base_black_100) / 0.32), 0px 24px 32px 0px rgba(var(--base_black_100) / 0.16),
      0px 4px 8px 0px rgba(var(--base_black_100) / 0.04), 0px 0px 1px 0px rgba(var(--base_black_100) / 0.3);
    --color-core-primary-fill: rgb(var(--base_white_100) / 90%);
    --color-core-primary-80: rgb(var(--base_white_100) / 80%);
    --color-core-primary-50: rgb(var(--base_white_100) / 50%);
    --color-core-primary-20: rgb(var(--base_white_100) / 20%);
    --color-core-primary-10: rgb(var(--base_white_100) / 10%);
    --color-core-primary-5: rgb(var(--base_white_100) / 5%);
    --color-core-primary-2: rgb(var(--base_white_100) / 2%);
  }

  /* breaking changes from tailwind 3 to 4 */
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }

  button,
  [role="button"] {
    cursor: pointer;
  }

  .no-spinner {
    -moz-appearance: textfield;
  }

  .no-spinner::-webkit-outer-spin-button,
  .no-spinner::-webkit-inner-spin-button {
    margin: 0;
    -webkit-appearance: none;
  }
}

@layer utilities {
  .scrollbar-hide {
    -ms-overflow-style: none;
    scrollbar-width: none;
  }
  .scrollbar-hide::-webkit-scrollbar {
    display: none;
  }
}

